Fix z-index for Cell hover tooltip

--- a/src/components/Cell/Cell.scss
+++ b/src/components/Cell/Cell.scss
@@ -12,6 +12,7 @@
   &:not(.disabled):not(.disable-scale):hover {
     transform: scale(1.3);
     cursor: pointer;
+    z-index: 20;
   }
 
   position: relative;
@@ -92,14 +93,12 @@
   white-space: nowrap;
   opacity: 0;
   transition: opacity 0.3s ease;
-  z-index: 9999;
 }
 
 .cell:hover .cell-tooltip-text {
   &:not(.disable-hover):not(.hidden) {
     visibility: visible;
     opacity: 1;
-    z-index: 9999;
   }
 }
 
