--- a/src/components/CellActions/CellActions.scss
+++ b/src/components/CellActions/CellActions.scss
@@ -58,11 +58,9 @@
     white-space: nowrap;
     opacity: 0;
     transition: opacity 0.3s ease;
-    z-index: 9999;
 }
 
 .cell-button:hover .cell-action-tooltip-text {
     visibility: visible;
     opacity: 1;
-    z-index: 9999;
 }
